refatoração nos filtros